upload & index Pol

--- a/indexPol.html
+++ b/indexPol.html
@@ -4,9 +4,9 @@
 <body>
 
 <form action="uploadPol.php" method="post" enctype="multipart/form-data">
-    Select image to upload:
+    Select csv to upload:
     <input type="file" name="fileToUpload" id="fileToUpload">
-    <input type="submit" value="Upload Image" name="submit">
+    <input type="submit" value="Upload CSV" name="submit">
 </form>
 
 
